grammar/y.output

state 0
	$accept: .program $end 
	program: .    (1)
	with_clause: .    (48)

	SELECT  reduce 48 (src line 329)
	WITH  shift 6
	.  reduce 1 (src line 137)

	program  goto 1
	procedure_statement  goto 2
	common_statement  goto 3
	select_query  goto 4
	with_clause  goto 5

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  procedure_statement.    (2)
	program:  procedure_statement.';' program 

	';'  shift 7
	.  reduce 2 (src line 143)


state 3
	procedure_statement:  common_statement.    (4)

	.  reduce 4 (src line 155)


state 4
	common_statement:  select_query.    (5)

	.  reduce 5 (src line 162)


state 5
	select_query:  with_clause.select_entity order_by_clause limit_clause offset_clause 

	SELECT  shift 10
	.  error

	select_clause  goto 9
	select_entity  goto 8

state 6
	with_clause:  WITH.inline_tables 

	recursive  shift 13
	.  error

	inline_table  goto 12
	inline_tables  goto 11

state 7
	program:  procedure_statement ';'.program 
	program: .    (1)
	with_clause: .    (48)

	SELECT  reduce 48 (src line 329)
	WITH  shift 6
	.  reduce 1 (src line 137)

	program  goto 14
	procedure_statement  goto 2
	common_statement  goto 3
	select_query  goto 4
	with_clause  goto 5

state 8
	select_query:  with_clause select_entity.order_by_clause limit_clause offset_clause 
	order_by_clause: .    (11)

	ORDER  shift 16
	.  reduce 11 (src line 205)

	order_by_clause  goto 15

state 9
	select_entity:  select_clause.from_clause 
	from_clause: .    (9)

	FROM  shift 18
	.  reduce 9 (src line 197)

	from_clause  goto 17

state 10
	select_clause:  SELECT.distinct fields 
	distinct: .    (138)

	DISTINCT  shift 20
	.  reduce 138 (src line 705)

	distinct  goto 19

state 11
	with_clause:  WITH inline_tables.    (49)

	.  reduce 49 (src line 331)


state 12
	inline_tables:  inline_table.    (52)
	inline_tables:  inline_table.',' inline_tables 

	','  shift 21
	.  reduce 52 (src line 345)


state 13
	inline_table:  recursive.identifier AS '(' select_query ')' 
	inline_table:  recursive.identifier '(' identifiers ')' AS '(' select_query ')' 

	IDENTIFIER  shift 23
	TABLES  shift 26
	VIEWS  shift 27
	CURSORS  shift 28
	FUNCTIONS  shift 29
	FUNCTION_NTH  shift 36
	FUNCTION_WITH_INS  shift 37
	ERROR  shift 38
	COUNT  shift 32
	LISTAGG  shift 33
	ROWS  shift 30
	AGGREGATE_FUNCTION  shift 34
	ANALYTIC_FUNCTION  shift 35
	NULLS  shift 25
	TIES  shift 24
	FIELDS  shift 31
	.  error

	identifier  goto 22

state 14
	program:  procedure_statement ';' program.    (3)

	.  reduce 3 (src line 148)


state 15
	select_query:  with_clause select_entity order_by_clause.limit_clause offset_clause 
	limit_clause: .    (24)

	LIMIT  shift 40
	.  reduce 24 (src line 241)

	limit_clause  goto 39

state 16
	order_by_clause:  ORDER.BY order_items 

	BY  shift 41
	.  error


state 17
	select_entity:  select_clause from_clause.    (7)

	.  reduce 7 (src line 179)


state 18
	from_clause:  FROM.tables 

	IDENTIFIER  shift 23
	TABLES  shift 26
	VIEWS  shift 27
	CURSORS  shift 28
	FUNCTIONS  shift 29
	FUNCTION_NTH  shift 36
	FUNCTION_WITH_INS  shift 37
	STDIN  shift 50
	ERROR  shift 38
	COUNT  shift 32
	LISTAGG  shift 33
	ROWS  shift 30
	AGGREGATE_FUNCTION  shift 34
	ANALYTIC_FUNCTION  shift 35
	NULLS  shift 25
	TIES  shift 24
	FIELDS  shift 31
	'('  shift 46
	.  error

	tables  goto 42
	table  goto 43
	subquery  goto 48
	table_identifier  goto 47
	identified_table  goto 44
	virtual_table_object  goto 45
	identifier  goto 49

state 19
	select_clause:  SELECT distinct.fields 

	IDENTIFIER  shift 23
	STRING  shift 71
	INTEGER  shift 72
	FLOAT  shift 73
	TERNARY  shift 85
	DATETIME  shift 75
	VARIABLE  shift 84
	TABLES  shift 26
	VIEWS  shift 27
	CURSORS  shift 28
	FUNCTIONS  shift 29
	FUNCTION_NTH  shift 36
	FUNCTION_WITH_INS  shift 37
	NOT  shift 82
	ERROR  shift 38
	COUNT  shift 70
	LISTAGG  shift 33
	ROWS  shift 30
	AGGREGATE_FUNCTION  shift 79
	ANALYTIC_FUNCTION  shift 35
	NULLS  shift 25
	NULL  shift 86
	EXISTS  shift 81
	TIES  shift 24
	FIELDS  shift 31
	'*'  shift 57
	'('  shift 68
	'-'  shift 77
	'+'  shift 78
	'!'  shift 83
	.  error

	field_object  goto 53
	field  goto 52
	fields  goto 51
	field_reference  goto 58
	value  goto 55
	wildcard  goto 54
	row_value  goto 80
	null  goto 76
	aggregate_function  goto 63
	primitive_type  goto 59
	arithmetic  goto 60
	ternary  goto 74
	logic  goto 65
	string_operation  goto 61
	subquery  goto 62
	comparison  goto 64
	variable  goto 66
	variable_substitution  goto 67
	analytic_function  goto 56
	identifier  goto 69

state 20
	distinct:  DISTINCT.    (139)

	.  reduce 139 (src line 707)


state 21
	inline_tables:  inline_table ','.inline_tables 

	recursive  shift 13
	.  error

	inline_table  goto 12
	inline_tables  goto 87

state 22
	inline_table:  recursive identifier.AS '(' select_query ')' 
	inline_table:  recursive identifier.'(' identifiers ')' AS '(' select_query ')' 

	AS  shift 88
	'('  shift 89
	.  error


state 23
	identifier:  IDENTIFIER.    (99)

	.  reduce 99 (src line 565)


state 24
	identifier:  TIES.    (100)

	.  reduce 100 (src line 570)


state 25
	identifier:  NULLS.    (101)

	.  reduce 101 (src line 574)


state 26
	identifier:  TABLES.    (102)

	.  reduce 102 (src line 578)


state 27
	identifier:  VIEWS.    (103)

	.  reduce 103 (src line 582)


state 28
	identifier:  CURSORS.    (104)

	.  reduce 104 (src line 586)


state 29
	identifier:  FUNCTIONS.    (105)

	.  reduce 105 (src line 590)


state 30
	identifier:  ROWS.    (106)

	.  reduce 106 (src line 594)


state 31
	identifier:  FIELDS.    (107)

	.  reduce 107 (src line 598)


state 32
	identifier:  COUNT.    (108)

	.  reduce 108 (src line 602)


state 33
	identifier:  LISTAGG.    (109)

	.  reduce 109 (src line 606)


state 34
	identifier:  AGGREGATE_FUNCTION.    (110)

	.  reduce 110 (src line 610)


state 35
	identifier:  ANALYTIC_FUNCTION.    (111)

	.  reduce 111 (src line 614)


state 36
	identifier:  FUNCTION_NTH.    (112)

	.  reduce 112 (src line 618)


state 37
	identifier:  FUNCTION_WITH_INS.    (113)

	.  reduce 113 (src line 622)


state 38
	identifier:  ERROR.    (114)

	.  reduce 114 (src line 626)


state 39
	select_query:  with_clause select_entity order_by_clause limit_clause.offset_clause 
	offset_clause: .    (29)

	OFFSET  shift 91
	.  reduce 29 (src line 263)

	offset_clause  goto 90

state 40
	limit_clause:  LIMIT.value limit_with 
	limit_clause:  LIMIT.value PERCENT limit_with 

	IDENTIFIER  shift 23
	STRING  shift 71
	INTEGER  shift 72
	FLOAT  shift 73
	TERNARY  shift 85
	DATETIME  shift 75
	VARIABLE  shift 84
	TABLES  shift 26
	VIEWS  shift 27
	CURSORS  shift 28
	FUNCTIONS  shift 29
	FUNCTION_NTH  shift 36
	FUNCTION_WITH_INS  shift 37
	NOT  shift 82
	ERROR  shift 38
	COUNT  shift 94
	LISTAGG  shift 33
	ROWS  shift 30
	AGGREGATE_FUNCTION  shift 79
	ANALYTIC_FUNCTION  shift 35
	NULLS  shift 25
	NULL  shift 86
	EXISTS  shift 81
	TIES  shift 24
	FIELDS  shift 31
	'('  shift 68
	'-'  shift 77
	'+'  shift 78
	'!'  shift 83
	.  error

	field_reference  goto 58
	value  goto 92
	row_value  goto 80
	null  goto 76
	aggregate_function  goto 63
	primitive_type  goto 59
	arithmetic  goto 60
	ternary  goto 74
	logic  goto 65
	string_operation  goto 61
	subquery  goto 62
	comparison  goto 64
	variable  goto 66
	variable_substitution  goto 67
	identifier  goto 93

state 41
	order_by_clause:  ORDER BY.order_items 

	IDENTIFIER  shift 23
	STRING  shift 71
	INTEGER  shift 72
	FLOAT  shift 73
	TERNARY  shift 85
	DATETIME  shift 75
	VARIABLE  shift 84
	TABLES  shift 26
	VIEWS  shift 27
	CURSORS  shift 28
	FUNCTIONS  shift 29
	FUNCTION_NTH  shift 36
	FUNCTION_WITH_INS  shift 37
	NOT  shift 82
	ERROR  shift 38
	COUNT  shift 70
	LISTAGG  shift 33
	ROWS  shift 30
	AGGREGATE_FUNCTION  shift 79
	ANALYTIC_FUNCTION  shift 35
	NULLS  shift 25
	NULL  shift 86
	EXISTS  shift 81
	TIES  shift 24
	FIELDS  shift 31
	'('  shift 68
	'-'  shift 77
	'+'  shift 78
	'!'  shift 83
	.  error

	field_reference  goto 58
	value  goto 98
	order_items  goto 95
	order_item  goto 96
	row_value  goto 80
	order_value  goto 97
	null  goto 76
	aggregate_function  goto 63
	primitive_type  goto 59
	arithmetic  goto 60
	ternary  goto 74
	logic  goto 65
	string_operation  goto 61
	subquery  goto 62
	comparison  goto 64
	variable  goto 66
	variable_substitution  goto 67
	analytic_function  goto 99
	identifier  goto 69

state 42
	from_clause:  FROM tables.    (10)

	.  reduce 10 (src line 199)


state 43
	tables:  table.    (36)
	tables:  table.',' tables 

	','  shift 100
	.  reduce 36 (src line 284)


state 44
	table:  identified_table.    (38)

	.  reduce 38 (src line 291)


state 45
	table:  virtual_table_object.    (39)
	table:  virtual_table_object.identifier 

	IDENTIFIER  shift 23
	TABLES  shift 26
	VIEWS  shift 27
	CURSORS  shift 28
	FUNCTIONS  shift 29
	FUNCTION_NTH  shift 36
	FUNCTION_WITH_INS  shift 37
	ERROR  shift 38
	COUNT  shift 32
	LISTAGG  shift 33
	ROWS  shift 30
	AGGREGATE_FUNCTION  shift 34
	ANALYTIC_FUNCTION  shift 35
	NULLS  shift 25
	TIES  shift 24
	FIELDS  shift 31
	.  reduce 39 (src line 293)

	identifier  goto 101

state 46
	table:  '('.table ')' 
	subquery:  '('.select_query ')' 
	with_clause: .    (48)

	IDENTIFIER  shift 23
	WITH  shift 6
	TABLES  shift 26
	VIEWS  shift 27
	CURSORS  shift 28
	FUNCTIONS  shift 29
	FUNCTION_NTH  shift 36
	FUNCTION_WITH_INS  shift 37
	STDIN  shift 50
	ERROR  shift 38
	COUNT  shift 32
	LISTAGG  shift 33
	ROWS  shift 30
	AGGREGATE_FUNCTION  shift 34
	ANALYTIC_FUNCTION  shift 35
	NULLS  shift 25
	TIES  shift 24
	FIELDS  shift 31
	'('  shift 46
	.  reduce 48 (src line 329)

	select_query  goto 103
	table  goto 102
	with_clause  goto 5
	subquery  goto 48
	table_identifier  goto 47
	identified_table  goto 44
	virtual_table_object  goto 45
	identifier  goto 49

state 47
	identified_table:  table_identifier.    (44)
	identified_table:  table_identifier.identifier 
	identified_table:  table_identifier.AS identifier 

	IDENTIFIER  shift 23
	TABLES  shift 26
	AS  shift 105
	VIEWS  shift 27
	CURSORS  shift 28
	FUNCTIONS  shift 29
	FUNCTION_NTH  shift 36
	FUNCTION_WITH_INS  shift 37
	ERROR  shift 38
	COUNT  shift 32
	LISTAGG  shift 33
	ROWS  shift 30
	AGGREGATE_FUNCTION  shift 34
	ANALYTIC_FUNCTION  shift 35
	NULLS  shift 25
	TIES  shift 24
	FIELDS  shift 31
	.  reduce 44 (src line 309)

	identifier  goto 104

state 48
	virtual_table_object:  subquery.    (47)

	.  reduce 47 (src line 322)


state 49
	table_identifier:  identifier.    (42)

	.  reduce 42 (src line 299)


state 50
	table_identifier:  STDIN.    (43)

	.  reduce 43 (src line 304)


state 51
	select_clause:  SELECT distinct fields.    (8)

	.  reduce 8 (src line 189)


state 52
	fields:  field.    (56)
	fields:  field.',' fields 

	','  shift 106
	.  reduce 56 (src line 361)


state 53
	field:  field_object.    (33)
	field:  field_object.AS identifier 

	AS  shift 107
	.  reduce 33 (src line 275)


state 54
	field:  wildcard.    (35)

	.  reduce 35 (src line 281)


state 55
	field_object:  value.    (31)
	string_operation:  value.STRING_OP value 
	comparison:  value.COMPARISON_OP value 
	comparison:  value.'=' value 
	comparison:  value.IN row_value 
	comparison:  value.NOT IN row_value 
	arithmetic:  value.'+' value 
	arithmetic:  value.'-' value 
	arithmetic:  value.'*' value 
	arithmetic:  value.'/' value 
	arithmetic:  value.'%' value 
	logic:  value.OR value 
	logic:  value.AND value 

	COMPARISON_OP  shift 109
	STRING_OP  shift 108
	AND  shift 119
	OR  shift 118
	NOT  shift 112
	IN  shift 111
	'*'  shift 115
	'='  shift 110
	'-'  shift 114
	'+'  shift 113
	'/'  shift 116
	'%'  shift 117
	.  reduce 31 (src line 271)


state 56
	field_object:  analytic_function.    (32)

	.  reduce 32 (src line 273)


state 57
	wildcard:  '*'.    (65)

	.  reduce 65 (src line 408)


state 58
	value:  field_reference.    (121)

	.  reduce 121 (src line 664)


state 59
	value:  primitive_type.    (122)

	.  reduce 122 (src line 666)


state 60
	value:  arithmetic.    (123)

	.  reduce 123 (src line 667)


state 61
	value:  string_operation.    (124)

	.  reduce 124 (src line 668)


 62: reduce/reduce conflict  (red'ns 67 and 125) on COMPARISON_OP
 62: reduce/reduce conflict  (red'ns 67 and 125) on '='
state 62
	row_value:  subquery.    (67)
	value:  subquery.    (125)

	COMPARISON_OP  reduce 67 (src line 420)
	'='  reduce 67 (src line 420)
	.  reduce 125 (src line 669)


state 63
	value:  aggregate_function.    (126)

	.  reduce 126 (src line 670)


state 64
	value:  comparison.    (127)

	.  reduce 127 (src line 671)


state 65
	value:  logic.    (128)

	.  reduce 128 (src line 672)


state 66
	variable_substitution:  variable.SUBSTITUTION_OP value 
	value:  variable.    (129)

	SUBSTITUTION_OP  shift 120
	.  reduce 129 (src line 673)


state 67
	value:  variable_substitution.    (130)

	.  reduce 130 (src line 674)


state 68
	row_value:  '('.values ')' 
	subquery:  '('.select_query ')' 
	value:  '('.value ')' 
	with_clause: .    (48)

	IDENTIFIER  shift 23
	STRING  shift 71
	INTEGER  shift 72
	FLOAT  shift 73
	TERNARY  shift 85
	DATETIME  shift 75
	VARIABLE  shift 84
	WITH  shift 6
	TABLES  shift 26
	VIEWS  shift 27
	CURSORS  shift 28
	FUNCTIONS  shift 29
	FUNCTION_NTH  shift 36
	FUNCTION_WITH_INS  shift 37
	NOT  shift 82
	ERROR  shift 38
	COUNT  shift 94
	LISTAGG  shift 33
	ROWS  shift 30
	AGGREGATE_FUNCTION  shift 79
	ANALYTIC_FUNCTION  shift 35
	NULLS  shift 25
	NULL  shift 86
	EXISTS  shift 81
	TIES  shift 24
	FIELDS  shift 31
	'('  shift 68
	'-'  shift 77
	'+'  shift 78
	'!'  shift 83
	.  reduce 48 (src line 329)

	select_query  goto 103
	with_clause  goto 5
	field_reference  goto 58
	value  goto 122
	values  goto 121
	row_value  goto 80
	null  goto 76
	aggregate_function  goto 63
	primitive_type  goto 59
	arithmetic  goto 60
	ternary  goto 74
	logic  goto 65
	string_operation  goto 61
	subquery  goto 62
	comparison  goto 64
	variable  goto 66
	variable_substitution  goto 67
	identifier  goto 93

state 69
	analytic_function:  identifier.'(' arguments ')' 
	field_reference:  identifier.    (81)
	field_reference:  identifier.'.' identifier 
	field_reference:  identifier.'.' INTEGER 
	aggregate_function:  identifier.'(' distinct arguments ')' 

	'('  shift 123
	'.'  shift 124
	.  reduce 81 (src line 508)


70: shift/reduce conflict (shift 125(0), red'n 108(0)) on '('
state 70
	analytic_function:  COUNT.'(' distinct arguments ')' 
	analytic_function:  COUNT.'(' distinct wildcard ')' 
	aggregate_function:  COUNT.'(' distinct arguments ')' 
	aggregate_function:  COUNT.'(' distinct wildcard ')' 
	identifier:  COUNT.    (108)

	'('  shift 125
	.  reduce 108 (src line 602)


state 71
	primitive_type:  STRING.    (132)

	.  reduce 132 (src line 678)


state 72
	primitive_type:  INTEGER.    (133)

	.  reduce 133 (src line 683)


state 73
	primitive_type:  FLOAT.    (134)

	.  reduce 134 (src line 687)


state 74
	primitive_type:  ternary.    (135)

	.  reduce 135 (src line 691)


state 75
	primitive_type:  DATETIME.    (136)

	.  reduce 136 (src line 695)


state 76
	primitive_type:  null.    (137)

	.  reduce 137 (src line 699)


state 77
	arithmetic:  '-'.value 

	IDENTIFIER  shift 23
	STRING  shift 71
	INTEGER  shift 72
	FLOAT  shift 73
	TERNARY  shift 85
	DATETIME  shift 75
	VARIABLE  shift 84
	TABLES  shift 26
	VIEWS  shift 27
	CURSORS  shift 28
	FUNCTIONS  shift 29
	FUNCTION_NTH  shift 36
	FUNCTION_WITH_INS  shift 37
	NOT  shift 82
	ERROR  shift 38
	COUNT  shift 94
	LISTAGG  shift 33
	ROWS  shift 30
	AGGREGATE_FUNCTION  shift 79
	ANALYTIC_FUNCTION  shift 35
	NULLS  shift 25
	NULL  shift 86
	EXISTS  shift 81
	TIES  shift 24
	FIELDS  shift 31
	'('  shift 68
	'-'  shift 77
	'+'  shift 78
	'!'  shift 83
	.  error

	field_reference  goto 58
	value  goto 126
	row_value  goto 80
	null  goto 76
	aggregate_function  goto 63
	primitive_type  goto 59
	arithmetic  goto 60
	ternary  goto 74
	logic  goto 65
	string_operation  goto 61
	subquery  goto 62
	comparison  goto 64
	variable  goto 66
	variable_substitution  goto 67
	identifier  goto 93

state 78
	arithmetic:  '+'.value 

	IDENTIFIER  shift 23
	STRING  shift 71
	INTEGER  shift 72
	FLOAT  shift 73
	TERNARY  shift 85
	DATETIME  shift 75
	VARIABLE  shift 84
	TABLES  shift 26
	VIEWS  shift 27
	CURSORS  shift 28
	FUNCTIONS  shift 29
	FUNCTION_NTH  shift 36
	FUNCTION_WITH_INS  shift 37
	NOT  shift 82
	ERROR  shift 38
	COUNT  shift 94
	LISTAGG  shift 33
	ROWS  shift 30
	AGGREGATE_FUNCTION  shift 79
	ANALYTIC_FUNCTION  shift 35
	NULLS  shift 25
	NULL  shift 86
	EXISTS  shift 81
	TIES  shift 24
	FIELDS  shift 31
	'('  shift 68
	'-'  shift 77
	'+'  shift 78
	'!'  shift 83
	.  error

	field_reference  goto 58
	value  goto 127
	row_value  goto 80
	null  goto 76
	aggregate_function  goto 63
	primitive_type  goto 59
	arithmetic  goto 60
	ternary  goto 74
	logic  goto 65
	string_operation  goto 61
	subquery  goto 62
	comparison  goto 64
	variable  goto 66
	variable_substitution  goto 67
	identifier  goto 93

79: shift/reduce conflict (shift 128(0), red'n 110(0)) on '('
state 79
	aggregate_function:  AGGREGATE_FUNCTION.'(' distinct arguments ')' 
	identifier:  AGGREGATE_FUNCTION.    (110)

	'('  shift 128
	.  reduce 110 (src line 610)


state 80
	comparison:  row_value.COMPARISON_OP row_value 
	comparison:  row_value.'=' row_value 

	COMPARISON_OP  shift 129
	'='  shift 130
	.  error


state 81
	comparison:  EXISTS.subquery 

	'('  shift 132
	.  error

	subquery  goto 131

state 82
	logic:  NOT.value 

	IDENTIFIER  shift 23
	STRING  shift 71
	INTEGER  shift 72
	FLOAT  shift 73
	TERNARY  shift 85
	DATETIME  shift 75
	VARIABLE  shift 84
	TABLES  shift 26
	VIEWS  shift 27
	CURSORS  shift 28
	FUNCTIONS  shift 29
	FUNCTION_NTH  shift 36
	FUNCTION_WITH_INS  shift 37
	NOT  shift 82
	ERROR  shift 38
	COUNT  shift 94
	LISTAGG  shift 33
	ROWS  shift 30
	AGGREGATE_FUNCTION  shift 79
	ANALYTIC_FUNCTION  shift 35
	NULLS  shift 25
	NULL  shift 86
	EXISTS  shift 81
	TIES  shift 24
	FIELDS  shift 31
	'('  shift 68
	'-'  shift 77
	'+'  shift 78
	'!'  shift 83
	.  error

	field_reference  goto 58
	value  goto 133
	row_value  goto 80
	null  goto 76
	aggregate_function  goto 63
	primitive_type  goto 59
	arithmetic  goto 60
	ternary  goto 74
	logic  goto 65
	string_operation  goto 61
	subquery  goto 62
	comparison  goto 64
	variable  goto 66
	variable_substitution  goto 67
	identifier  goto 93

state 83
	logic:  '!'.value 

	IDENTIFIER  shift 23
	STRING  shift 71
	INTEGER  shift 72
	FLOAT  shift 73
	TERNARY  shift 85
	DATETIME  shift 75
	VARIABLE  shift 84
	TABLES  shift 26
	VIEWS  shift 27
	CURSORS  shift 28
	FUNCTIONS  shift 29
	FUNCTION_NTH  shift 36
	FUNCTION_WITH_INS  shift 37
	NOT  shift 82
	ERROR  shift 38
	COUNT  shift 94
	LISTAGG  shift 33
	ROWS  shift 30
	AGGREGATE_FUNCTION  shift 79
	ANALYTIC_FUNCTION  shift 35
	NULLS  shift 25
	NULL  shift 86
	EXISTS  shift 81
	TIES  shift 24
	FIELDS  shift 31
	'('  shift 68
	'-'  shift 77
	'+'  shift 78
	'!'  shift 83
	.  error

	field_reference  goto 58
	value  goto 134
	row_value  goto 80
	null  goto 76
	aggregate_function  goto 63
	primitive_type  goto 59
	arithmetic  goto 60
	ternary  goto 74
	logic  goto 65
	string_operation  goto 61
	subquery  goto 62
	comparison  goto 64
	variable  goto 66
	variable_substitution  goto 67
	identifier  goto 93

state 84
	variable:  VARIABLE.    (116)

	.  reduce 116 (src line 635)


state 85
	ternary:  TERNARY.    (120)

	.  reduce 120 (src line 657)


state 86
	null:  NULL.    (115)

	.  reduce 115 (src line 632)


state 87
	inline_tables:  inline_table ',' inline_tables.    (53)

	.  reduce 53 (src line 350)


state 88
	inline_table:  recursive identifier AS.'(' select_query ')' 

	'('  shift 135
	.  error


state 89
	inline_table:  recursive identifier '('.identifiers ')' AS '(' select_query ')' 

	IDENTIFIER  shift 23
	TABLES  shift 26
	VIEWS  shift 27
	CURSORS  shift 28
	FUNCTIONS  shift 29
	FUNCTION_NTH  shift 36
	FUNCTION_WITH_INS  shift 37
	ERROR  shift 38
	COUNT  shift 32
	LISTAGG  shift 33
	ROWS  shift 30
	AGGREGATE_FUNCTION  shift 34
	ANALYTIC_FUNCTION  shift 35
	NULLS  shift 25
	TIES  shift 24
	FIELDS  shift 31
	.  error

	identifiers  goto 136
	identifier  goto 137

state 90
	select_query:  with_clause select_entity order_by_clause limit_clause offset_clause.    (6)

	.  reduce 6 (src line 166)


state 91
	offset_clause:  OFFSET.value 

	IDENTIFIER  shift 23
	STRING  shift 71
	INTEGER  shift 72
	FLOAT  shift 73
	TERNARY  shift 85
	DATETIME  shift 75
	VARIABLE  shift 84
	TABLES  shift 26
	VIEWS  shift 27
	CURSORS  shift 28
	FUNCTIONS  shift 29
	FUNCTION_NTH  shift 36
	FUNCTION_WITH_INS  shift 37
	NOT  shift 82
	ERROR  shift 38
	COUNT  shift 94
	LISTAGG  shift 33
	ROWS  shift 30
	AGGREGATE_FUNCTION  shift 79
	ANALYTIC_FUNCTION  shift 35
	NULLS  shift 25
	NULL  shift 86
	EXISTS  shift 81
	TIES  shift 24
	FIELDS  shift 31
	'('  shift 68
	'-'  shift 77
	'+'  shift 78
	'!'  shift 83
	.  error

	field_reference  goto 58
	value  goto 138
	row_value  goto 80
	null  goto 76
	aggregate_function  goto 63
	primitive_type  goto 59
	arithmetic  goto 60
	ternary  goto 74
	logic  goto 65
	string_operation  goto 61
	subquery  goto 62
	comparison  goto 64
	variable  goto 66
	variable_substitution  goto 67
	identifier  goto 93

state 92
	limit_clause:  LIMIT value.limit_with 
	limit_clause:  LIMIT value.PERCENT limit_with 
	string_operation:  value.STRING_OP value 
	comparison:  value.COMPARISON_OP value 
	comparison:  value.'=' value 
	comparison:  value.IN row_value 
	comparison:  value.NOT IN row_value 
	arithmetic:  value.'+' value 
	arithmetic:  value.'-' value 
	arithmetic:  value.'*' value 
	arithmetic:  value.'/' value 
	arithmetic:  value.'%' value 
	logic:  value.OR value 
	logic:  value.AND value 
	limit_with: .    (27)

	WITH  shift 141
	COMPARISON_OP  shift 109
	STRING_OP  shift 108
	PERCENT  shift 140
	AND  shift 119
	OR  shift 118
	NOT  shift 112
	IN  shift 111
	'*'  shift 115
	'='  shift 110
	'-'  shift 114
	'+'  shift 113
	'/'  shift 116
	'%'  shift 117
	.  reduce 27 (src line 253)

	limit_with  goto 139

state 93
	field_reference:  identifier.    (81)
	field_reference:  identifier.'.' identifier 
	field_reference:  identifier.'.' INTEGER 
	aggregate_function:  identifier.'(' distinct arguments ')' 

	'('  shift 142
	'.'  shift 124
	.  reduce 81 (src line 508)


94: shift/reduce conflict (shift 143(0), red'n 108(0)) on '('
state 94
	aggregate_function:  COUNT.'(' distinct arguments ')' 
	aggregate_function:  COUNT.'(' distinct wildcard ')' 
	identifier:  COUNT.    (108)

	'('  shift 143
	.  reduce 108 (src line 602)


state 95
	order_by_clause:  ORDER BY order_items.    (12)

	.  reduce 12 (src line 207)


state 96
	order_items:  order_item.    (13)
	order_items:  order_item.',' order_items 

	','  shift 144
	.  reduce 13 (src line 212)


state 97
	order_item:  order_value.order_direction 
	order_item:  order_value.order_direction NULLS order_null_position 
	order_direction: .    (19)

	ASC  shift 146
	DESC  shift 147
	.  reduce 19 (src line 230)

	order_direction  goto 145

state 98
	order_value:  value.    (17)
	string_operation:  value.STRING_OP value 
	comparison:  value.COMPARISON_OP value 
	comparison:  value.'=' value 
	comparison:  value.IN row_value 
	comparison:  value.NOT IN row_value 
	arithmetic:  value.'+' value 
	arithmetic:  value.'-' value 
	arithmetic:  value.'*' value 
	arithmetic:  value.'/' value 
	arithmetic:  value.'%' value 
	logic:  value.OR value 
	logic:  value.AND value 

	COMPARISON_OP  shift 109
	STRING_OP  shift 108
	AND  shift 119
	OR  shift 118
	NOT  shift 112
	IN  shift 111
	'*'  shift 115
	'='  shift 110
	'-'  shift 114
	'+'  shift 113
	'/'  shift 116
	'%'  shift 117
	.  reduce 17 (src line 225)


state 99
	order_value:  analytic_function.    (18)

	.  reduce 18 (src line 227)


state 100
	tables:  table ','.tables 

	IDENTIFIER  shift 23
	TABLES  shift 26
	VIEWS  shift 27
	CURSORS  shift 28
	FUNCTIONS  shift 29
	FUNCTION_NTH  shift 36
	FUNCTION_WITH_INS  shift 37
	STDIN  shift 50
	ERROR  shift 38
	COUNT  shift 32
	LISTAGG  shift 33
	ROWS  shift 30
	AGGREGATE_FUNCTION  shift 34
	ANALYTIC_FUNCTION  shift 35
	NULLS  shift 25
	TIES  shift 24
	FIELDS  shift 31
	'('  shift 46
	.  error

	tables  goto 148
	table  goto 43
	subquery  goto 48
	table_identifier  goto 47
	identified_table  goto 44
	virtual_table_object  goto 45
	identifier  goto 49

state 101
	table:  virtual_table_object identifier.    (40)

	.  reduce 40 (src line 294)


state 102
	table:  '(' table.')' 

	')'  shift 149
	.  error


state 103
	subquery:  '(' select_query.')' 

	')'  shift 150
	.  error


state 104
	identified_table:  table_identifier identifier.    (45)

	.  reduce 45 (src line 314)


state 105
	identified_table:  table_identifier AS.identifier 

	IDENTIFIER  shift 23
	TABLES  shift 26
	VIEWS  shift 27
	CURSORS  shift 28
	FUNCTIONS  shift 29
	FUNCTION_NTH  shift 36
	FUNCTION_WITH_INS  shift 37
	ERROR  shift 38
	COUNT  shift 32
	LISTAGG  shift 33
	ROWS  shift 30
	AGGREGATE_FUNCTION  shift 34
	ANALYTIC_FUNCTION  shift 35
	NULLS  shift 25
	TIES  shift 24
	FIELDS  shift 31
	.  error

	identifier  goto 151

state 106
	fields:  field ','.fields 

	IDENTIFIER  shift 23
	STRING  shift 71
	INTEGER  shift 72
	FLOAT  shift 73
	TERNARY  shift 85
	DATETIME  shift 75
	VARIABLE  shift 84
	TABLES  shift 26
	VIEWS  shift 27
	CURSORS  shift 28
	FUNCTIONS  shift 29
	FUNCTION_NTH  shift 36
	FUNCTION_WITH_INS  shift 37
	NOT  shift 82
	ERROR  shift 38
	COUNT  shift 70
	LISTAGG  shift 33
	ROWS  shift 30
	AGGREGATE_FUNCTION  shift 79
	ANALYTIC_FUNCTION  shift 35
	NULLS  shift 25
	NULL  shift 86
	EXISTS  shift 81
	TIES  shift 24
	FIELDS  shift 31
	'*'  shift 57
	'('  shift 68
	'-'  shift 77
	'+'  shift 78
	'!'  shift 83
	.  error

	field_object  goto 53
	field  goto 52
	fields  goto 152
	field_reference  goto 58
	value  goto 55
	wildcard  goto 54
	row_value  goto 80
	null  goto 76
	aggregate_function  goto 63
	primitive_type  goto 59
	arithmetic  goto 60
	ternary  goto 74
	logic  goto 65
	string_operation  goto 61
	subquery  goto 62
	comparison  goto 64
	variable  goto 66
	variable_substitution  goto 67
	analytic_function  goto 56
	identifier  goto 69

state 107
	field:  field_object AS.identifier 

	IDENTIFIER  shift 23
	TABLES  shift 26
	VIEWS  shift 27
	CURSORS  shift 28
	FUNCTIONS  shift 29
	FUNCTION_NTH  shift 36
	FUNCTION_WITH_INS  shift 37
	ERROR  shift 38
	COUNT  shift 32
	LISTAGG  shift 33
	ROWS  shift 30
	AGGREGATE_FUNCTION  shift 34
	ANALYTIC_FUNCTION  shift 35
	NULLS  shift 25
	TIES  shift 24
	FIELDS  shift 31
	.  error

	identifier  goto 153

state 108
	string_operation:  value STRING_OP.value 
